@@ -43,6 +43,14 @@ I just copied over /usr/include/c++/14/optional, and changed a few of the
 functions (where you see an '#if 0' commenting out the original function).
 We'll need to update this patch with major libstdc++ upgrades.
 
+XXX: one additional fix; comment out a __glibcxx_assert() that we keep
+hitting with gcc 12 and gcc 14:
+
+../../optional:477: _Tp &std::_Optional_base_impl<content::DocumentAssociatedData, std::_Optional_base<content::DocumentAssociatedData>>::_M_get() [_Tp = content::DocumentAssociatedData, _Dp = std::_Optional_base<content::DocumentAssociatedData>]: Assertion 'this->_M_is_engaged()' failed.
+[1218/170223.662125:ERROR:elf_dynamic_array_reader.h(64)] tag not found
+Aborted
+
+
 --- /dev/null
 +++ b/optional
 @@ -0,0 +1,1547 @@
@@ -520,7 +528,7 @@ We'll need to update this patch with major libstdc++ upgrades.
 +      constexpr _Tp&
 +      _M_get() noexcept
 +      {
-+	__glibcxx_assert(this->_M_is_engaged());
++	//__glibcxx_assert(this->_M_is_engaged());
 +	return static_cast<_Dp*>(this)->_M_payload._M_get();
 +      }
 +
